add user's image, user's info, posts in user
