# handlers/auth.go
@@ -1,38 +1,39 @@
-package auth
+package handlers
 
 import (
 	"encoding/json"
-	"net/http"
-
+	"github.com/misgorod/co-dev/auth"
 	"github.com/misgorod/co-dev/common"
-	"github.com/misgorod/co-dev/common/errors"
+	errors2 "github.com/misgorod/co-dev/errors"
+	"github.com/misgorod/co-dev/models"
+	"net/http"
 
 	"go.mongodb.org/mongo-driver/mongo"
 	"gopkg.in/go-playground/validator.v9"
 )
 
-type Handler struct {
+type AuthHandler struct {
 	Client   *mongo.Client
 	Validate *validator.Validate
 }
 
-func (a *Handler) Register(w http.ResponseWriter, r *http.Request) {
-	var user regUser
+func (a *AuthHandler) Register(w http.ResponseWriter, r *http.Request) {
+	var user models.RegUser
 
 	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
-		common.RespondError(w, errors.ErrDecodeRequest)
+		common.RespondError(w, errors2.ErrDecodeRequest)
 		return
 	}
 	if err := a.Validate.Struct(user); err != nil {
-		common.RespondError(w, errors.ErrValidateRequest)
+		common.RespondError(w, errors2.ErrValidateRequest)
 		return
 	}
-	err := createUser(r.Context(), a.Client, &user)
+	err := models.CreateUser(r.Context(), a.Client, &user)
 	if err != nil {
 		common.RespondError(w, err)
 		return
 	}
-	token, err := CreateToken(user.ID.Hex())
+	token, err := auth.CreateToken(user.ID.Hex())
 	if err != nil {
 		common.RespondError(w, err)
 		return
@@ -42,23 +43,23 @@ func (a *Handler) Register(w http.ResponseWriter, r *http.Request) {
 	common.RespondJSON(w, http.StatusCreated, &user)
 }
 
-func (a *Handler) Login(w http.ResponseWriter, r *http.Request) {
-	var user loginUser
+func (a *AuthHandler) Login(w http.ResponseWriter, r *http.Request) {
+	var user models.LoginUser
 
 	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
-		common.RespondError(w, errors.ErrDecodeRequest)
+		common.RespondError(w, errors2.ErrDecodeRequest)
 		return
 	}
 	if err := a.Validate.Struct(user); err != nil {
-		common.RespondError(w, errors.ErrValidateRequest)
+		common.RespondError(w, errors2.ErrValidateRequest)
 		return
 	}
-	err := validateUser(r.Context(), a.Client, &user)
+	err := models.ValidateUser(r.Context(), a.Client, &user)
 	if err != nil {
 		common.RespondError(w, err)
 		return
 	}
-	token, err := CreateToken(user.ID.Hex())
+	token, err := auth.CreateToken(user.ID.Hex())
 	if err != nil {
 		common.RespondError(w, err)
 		return
